test/errors/x004_hang.eu
#!/usr/bin/env eu -B
# -*- mode: conf -*-

f: f(s)
